--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,17 @@
- {
-  "version": 3,
-  "overrides": {},
+{
+  "version": 2,
   "routes": [
     {
+      "src": "/_nuxt/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
-      },
-      "src": "/_nuxt/(.*)"
+      }
     },
     {
+      "src": "/_fonts/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
-      },
-      "src": "/_fonts/(.*)"
+      }
     },
     {
       "handle": "filesystem"
