Complete redesign of projects page with professional visualizations

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@nuxt/icon": "^2.1.0",
     "@nuxt/image": "^2.0.0",
